<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" >
        </TextView>

        <EditText
            android:id="@+id/name_edit"
            style="@style/list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/location_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" >
        </TextView>

        <EditText
            android:id="@+id/location_edit"
            style="@style/list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/price_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" >
        </TextView>

        <EditText
            android:id="@+id/price_edit"
            style="@style/data_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/assessment_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment" >
        </TextView>

        <EditText
            android:id="@+id/assessment_edit"
            style="@style/data_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/recommendation_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendation" >
        </TextView>

        <EditText
            android:id="@+id/recommendation_edit"
            style="@style/list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/businesshours_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businesshours" >
        </TextView>

        <EditText
            android:id="@+id/businesshours_edit"
            style="@style/list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow07"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/remarks_view"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks" >
        </TextView>

        <EditText
            android:id="@+id/remarks_edit"
            style="@style/list_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </EditText>
    </TableRow>

</LinearLayout>