<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/classB"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/sidebar_food"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_item_height"
            android:background="@drawable/sidebar_button_bg" >

            <TextView
                style="@style/sidebar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_food_label" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sidebar_randomsearch"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_item_height"
            android:background="@drawable/sidebar_button_bg" >

            <TextView
                style="@style/sidebar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_randomchoise_label" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sidebar_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_item_height"
            android:background="@drawable/sidebar_button_bg" >

            <TextView
                style="@style/sidebar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_settings_label" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sidebar_exit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/sidebar_item_height"
        android:background="@drawable/sidebar_button_bg" >

        <TextView
            style="@style/sidebar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exit" />
    </RelativeLayout>

</LinearLayout>